intTests/test_parse_errors/parser007.log.good
Loading file "parser007.saw"
parser007.saw:3:1-3:8: Error: Syntax error: missing ';'
FAILED
