intTests/test_parse_errors/parser007.saw
// some missing fixed semicolons
include "nonexistent1"
include "nonexistent2"
